# axum-server

./: .dockerignore  .env  Cargo.toml  Dockerfile  Jenkinsfile  Jenkinsfile.txt  script.groovy
assets/: index.html
src/: main.rs
